--- a/css/main.css
+++ b/css/main.css
@@ -31,3 +31,146 @@
 		width: 100% !important;
 	}
 /* //공통영역 */
+
+/* 모바일영역 */
+/* 헤더영역 */
+	.on{
+		background: #31353d;
+	}
+	header{
+		height: 90px;
+		text-align: center;
+		z-index: 200;
+		background: rgba(0, 0, 0, 0.5);
+		position: absolute;
+		left: 0;
+		top: 0;
+		width: 100%;
+	}
+	.box_inner{
+		width: 100%;
+		margin: 0 auto;
+	}
+	/* 로고영역 */
+		.header_area h1{
+			float: none;
+			width: 100%;
+			height: 50px;
+			text-align: center;
+			padding: 3px 0 0;
+		}
+		.header_area h1 a{
+			display: inline-block;
+			width: 150px;
+			height: 80px;
+			background: url(../img/main_logo.png) no-repeat;
+			background-size: 150px 40px !important;
+			background-position: center center !important;
+			text-indent: -9999px;
+			overflow: hidden;
+		}
+	/* //로고영역 */
+	/* 상단메뉴영역 */
+		.openMOgnb{
+			display: block;
+			position: absolute;
+			left: 15px;
+			top: 35px;
+			width: 25px;
+			height: 16px;
+		}
+		.hdd{
+			text-indent: -9999px;
+			position: absolute;
+		}
+		.openMOgnb span{
+			box-sizing: border-box;
+			display: block;
+			width: 25px;
+			height: 3px;
+			margin-bottom: 4px;
+			border-radius: 10px;
+			background: #fff;
+		}
+		.openMOgnb span + span{
+			width: 17px;
+		}
+		.openMOgnb span:last-child{
+			width: 25px;
+			margin-bottom: 0px;
+		}
+		.header_cont{
+			float: none;
+			width: 100%;
+			background: #31353d;
+			display: none;
+		}
+		.closePop{
+			display: block;
+			position: absolute;
+			right: 0;
+			top: 15px;
+		}
+		.closePop a{
+			display: block;
+			width: 60px;
+			height: 60px;
+			text-indent: -9999px;
+			overflow: hidden;
+			background: url(../img/btn_closeMenu.png) no-repeat;
+			background-size: 60px;
+		}
+		.util{padding: 20px;}
+		.header_cont a{color: #fff; font-size: 16px;}
+		.util li{float: left;}
+		.util li::after{
+			content: '|';
+			display: inline-block;
+			padding: 0 10px;
+			color: #a2a2a3;
+			position: relative;
+			font-size: 10px;
+			top: -2px;
+		}
+		.util li:last-child::after{
+			content: '';
+			display: none;
+		}
+		.gnb{
+			float: none;
+			box-sizing: border-box;
+			padding-top: 0px;
+			height: auto;
+			border-top: 1px solid #83868b;
+		}
+		.gnb li{
+			float: left;
+			width: 50%;
+			text-align: left;
+			box-sizing: border-box;
+			border-bottom: 1px solid #83868b;
+		}
+		.gnb li a{
+			display: block;
+			padding: 0 0 0 65px;
+			height: 60px;
+			line-height: 60px;
+			background: url(../img/ico_gnb01.png) no-repeat 10px center;
+			background-size: 49px 56px;
+		}
+		.gnb_depth{display: none;}
+		.gnb li + li a{
+			background-image: url(../img/ico_gnb02.png);
+		}
+		.gnb li + li + li a{
+			background-image: url(../img/ico_gnb03.png);
+		}
+		.gnb li + li + li + li a{
+			background-image: url(../img/ico_gnb04.png);
+		}
+		.gnb li:nth-child(2n+1){
+			border-right: 1px solid #83868b;
+		}
+	/* //상단메뉴영역 */
+/* //헤더영역 */
+/*// 모바일영역 */
