--- a/css/main.css
+++ b/css/main.css
@@ -173,6 +173,7 @@
 		}
 	/* //상단메뉴영역 */
 /* //헤더영역 */
+
 /* 본문 컨테이너 영역 */
 	#container, #footer, .hdd, .quick_area{
 		text-align: center;
@@ -264,6 +265,75 @@
 		padding: 8px 0;
 	}
 	/* //공지사항 최근게시물 영역 */
-
 /* //본문 컨테이너 영역 */
+
+/* 푸터영역 */
+footer{
+	border-top: 1px solid #ddd;
+}
+.foot_area{
+	box-sizing: border-box;
+	padding: 0 20px 90px;
+	position: relative;
+}
+.foot_list{padding-top: 25px;}
+.foot_list li{
+	float: left;
+}
+.foot_list li:first-child::after{
+	content: '|';
+	display: inline-block;
+	padding: 0 10px;
+	font-size: 10px;
+	position: relative;
+	top: -2px;
+}
+.foot_list li a{
+	font-weight: bold;
+	font-size: 15px;
+}
+.foot_area h2{
+	padding-top: 15px;
+	font-size: 14px;
+	color: #666;
+}
+.addr{
+	line-height: 1.3;
+	font-size: 14px;
+	color: #767676;
+	padding-top: 5px;
+}
+.gubun{color: #fff;}
+.br_line{display: block;}
+.space0{letter-spacing: 0;}
+.copy{
+	padding: 3px 0 20px;
+	font-size: 14px;
+	color: #767676;
+}
+.snslink{
+	position: static;
+	width: 210px;
+	margin: 10px auto;
+}
+.snslink li:first-child{margin-left: 0;}
+.snslink li{
+	margin-left: 30px;
+	float: left;
+}
+.snslink li a{
+	display: block;
+	width: 50px;
+	height: 74px;
+	text-indent: -9999px;
+	overflow: hidden;
+	background: url(../img/ico_blog_r.png) no-repeat;
+}
+.snslink li + li a{
+	background-image: url(../img/ico_facebook_r.png);
+}
+.snslink li + li + li a{
+	background-image: url(../img/ico_instargram_r.png);
+}
+/* //푸터영역 */
 /*// 모바일영역 */
