태블릿용 스타일 시작

--- a/css/main.css
+++ b/css/main.css
@@ -336,4 +336,90 @@ footer{
 	background-image: url(../img/ico_instargram_r.png);
 }
 /* //푸터영역 */
+
+/* 퀵메뉴 영역 */
+.to_top{
+	position: fixed;
+	right: 20px;
+	bottom: 100px;
+	text-align: center;
+	background: none;
+	z-index: 100;
+}
+.to_top a{
+	display: block;
+	width: 45px;
+	height: 45px;
+	border-left: none;
+	border-bottom: none;
+	background: url(../img/ico_totop_mo.png) no-repeat center;
+	background-size: 45px;
+	box-sizing: border-box;
+	text-indent: -9999px;
+	overflow: hidden;
+}
+.quick_list{
+	position: fixed;
+	left: 0;
+	bottom: 0;
+	width: 100%;
+}
+.quick_list li{
+	float: left;
+	width: 31%;
+	text-align: left;
+	background: #3a3e46;
+	font-size: 15px;
+}
+.quick_list li:first-child::after{
+	content: '';
+	display: inline-block;
+	width: 1px;
+	height: 16px;
+	position: absolute;
+	right: 31%;
+	top: 50%;
+	margin-top: -8px;
+	background: #76787e;
+}
+.quick_list li a{
+	display: block;
+	padding: 10px 0;
+	color: #fff;
+}
+.quick_list li a p{display: none;}
+.quick_list li a h3{
+	height: 37px;
+	line-height: 37px;
+	padding-bottom: 0;
+	padding-left: 45px;
+	background: url(../img/ico_phone_mobtm.png) no-repeat 20px center;
+	background-size: 20px;
+	color: #fff;
+	letter-spacing: -1px;
+}
+.quick_list li + li{
+	width: 37%;
+}
+.quick_list li + li + li{
+	width: 32%;
+}
+.quick_list li + li a h3{
+	background-image: url(../img/ico_katalk_mobtm.png);
+}
+.quick_list li + li + li a h3{
+	background-image: url(../img/ico_contact_mobtm.png);
+}
+.quick_list li:last-child::before{
+	content: '';
+	display: inline-block;
+	width: 1px;
+	height: 16px;
+	position: absolute;
+	left: 32%;
+	top: 50%;
+	margin-top: -8px;
+	background: #76787e;
+}
+/* //퀵메뉴 영역 */
 /*// 모바일영역 */
