--- a/css/tablet.css
+++ b/css/tablet.css
@@ -66,5 +66,87 @@ header{
 .gnb li:last-child a{padding-right: 0;}
 /* //상단로고와 메뉴스타일 */
 
+/* 컨테이너영역 */
+#container{
+	padding-bottom: 20px;
+	width: initial;
+	position: initial;
+}
+/* //컨테이너영역 */
+
+/* 슬라이드영역 */
+.main_rolling_mobile{display: none;}
+.main_rolling_pc{display: block;}
+.visualRoll{
+	position: relative;
+	width: 100%;
+}
+.viewImgList{
+	position: relative;
+	width: 100%;
+}
+ul.viewImgList li{
+	text-align: center;
+	height: 550px;
+	line-height: 550px;
+	background-size: cover;
+	width: 100%;
+}
+.roll_content a img{display: none;}
+li.imglist0{
+	position: relative;
+	z-index: 50;
+	background: url(../img/maple.jpg) no-repeat;	
+}
+li.imglist1{
+	position: absolute;
+	left: 0;
+	top: 0;
+	z-index: 10;
+	background: url(../img/img_slidecontents02.png) no-repeat;
+}
+li.imglist2{
+	position: absolute;
+	left: 0;
+	top: 0;
+	z-index: 10;
+	background: url(../img/img_slidecontents03.png) no-repeat;
+}
+.roll_content{position: relative;}
+.roll_content .roll_txtline{
+	position: absolute;
+	left: 0;
+	bottom: 60px;
+	width: 100%;
+	line-height: 1;
+	text-align: center;
+	font-size: 22px;
+	color: #fff;
+	letter-spacing: 2px;
+}
+.rollbtnArea{
+	position: absolute;
+	width: 100%;
+	left: 0;
+	bottom: 25px;
+	z-index: 200;
+}
+.rollingbtn{
+	width: 320px;
+	margin: 0 auto;
+	text-align: center;
+}
+.rollingbtn li.butt0{
+	margin-left: 10px;
+}
+.rollingbtn li{
+	display: inline-block;
+	margin-right: 5px;
+}
+.rollingbtn li a{
+	vertical-align: top;
+}
+/* //슬라이드영역 */
+
 /* //태블릿영역 */
 }
