--- a/css/board.css
+++ b/css/board.css
@@ -1,1 +1,166 @@
 @charset "UTF-8";
+/* 메인상단 위치표시 영역 */
+.location_area{
+	height: 260px;
+	background: url(../img/img_top2.jpg) no-repeat center bottom / cover;
+}
+.tit_page{
+	padding: 140px 0 0 0;
+	margin: 0 45px;
+	border-bottom: 1px solid #ccc;
+	font: 30px 'Arial Narrow';
+	color: #fff;
+	letter-spacing: 3px;
+	text-align: left;
+}
+.location{display: none;}
+ul.page_menu{
+	display: block;
+	padding: 10px 0 0 45px;
+}
+ul.page_menu li{
+	float: left;
+	padding-bottom: 10px;
+}
+ul.page_menu li a.on{
+	border-bottom: 1px solid #fff;
+	color: #fff;
+	background: none;
+}
+ul.page_menu li a{
+	display: block;
+	margin-right: 20px;
+	font-size: 15px;
+	color: #ddd;
+}
+.tit_page .in{
+	font-variant: small-caps;
+}
+/* //메인상단 위치표시영역 */
+
+/* 게시판 리스트 본문영역 */
+.bodytext_area{
+	box-sizing: border-box;
+	padding: 0;
+}
+.minisrch_form{
+	width: 100%;
+	text-align: right;
+	margin-bottom: 20px;
+}
+.minisrch_form .tbox{
+	padding: 0 5px 0 30px;
+	width: 200px;
+	height: 35px;
+	line-height: 35px;
+	border: none;
+	border-bottom: 1px solid #ccc;
+	background: url(../img/ico_search.png) no-repeat 10px 50%;
+	background-size: 15px;
+}
+.btn_srch{
+	display: inline-block;
+	width: 70px;
+	text-align: center;
+	height: 35px;
+	line-height: 35px;
+	vertical-align: middle;
+	background: #384d75;
+	color: #fff !important;
+	border: none;
+}
+.minisrch_form legend{
+	font-size: 0;
+}
+input::placeholder{
+	color: #999;
+}
+.bbsListTbl{
+	width: 100%;
+	border-top: 2px solid #384d75;
+}
+.bbsListTbl th:nth-child(1){display: none;}
+.bbsListTbl th:nth-child(2){width: 70%;}
+.bbsListTbl th:nth-child(3){display: none;}
+.bbsListTbl th:nth-child(4){width: 30%;}
+.bbsListTbl th{
+	border-bottom: 1px solid #ccc;
+	font-weight: bold;
+	font-size: 14px;
+	padding: 0;
+	box-sizing: border-box;
+	height: 45px;
+	background: #fef3fa;
+}
+.bbsListTbl td:nth-child(1){display: none;}
+.bbsListTbl td:nth-child(3){display: none;}
+.bbsListTbl td{
+	text-align: center;
+	line-height: 1.3;
+	border-bottom: 1px solid #ccc;
+}
+.bbsListTbl td:nth-child(2){text-align: left;}
+.bbsListTbl th, .bbsListTbl td{
+	padding: 10px;
+	box-sizing: border-box;
+	height: 45px;
+}
+.pagination{padding: 40px 0 0;}
+.pagination a.pbtn{
+	display: inline-block;
+	padding: 7px;
+	text-align: center;
+	vertical-align: middle;
+	font-size: 0;
+}
+.pagination a{display: inline-block;}
+.pagination a .currentpage{
+	border-radius: 3px;
+	background: #384d75;
+	color: #fff;
+}
+.pagination a .pagenum{
+	display: inline-block;
+	width: 25px;
+	height: 25px;
+	line-height: 25px;
+	text-align: center;
+	vertical-align: middle;
+}
+.btn_line{padding: 20px 0;}
+.btn_line a:first-child{margin-left: 0;}
+.btn_baseColor{
+	display: inline-block;
+	width: 100%;
+	height: 50px;
+	line-height: 50px;
+	background: #384d75;
+	font-size: 20px;
+	font-weight: bold;
+	color: #fff !important;
+	text-align: center;
+	vertical-align: bottom;
+	border: none;
+}
+
+@media all and (min-width: 801px){
+/* 태블릿 + PC용 */
+.bbsListTbl th:nth-child(1){
+	margin-top: 7px;
+	display: block;
+}
+.bbsListTbl th:nth-child(2){width: 60%;}
+.bbsListTbl th:nth-child(3){
+	margin-top: 7px;
+	display: block;
+}
+.bbsListTbl th:nth-child(4){width: 20%;}
+.bbsListTbl td:nth-child(1){display: block;}
+.bbsListTbl td:nth-child(3){display: block;}
+.btn_baseColor{
+	width: 125px;
+	font-weight: normal;
+}
+/* //태블릿 + PC용 */
+}
+/* //게시판 리스트 본문영역 */
