--- a/css/board.css
+++ b/css/board.css
@@ -255,3 +255,88 @@ input::placeholder{
 /* //태블릿 + PC용 */	
 }
 /* //게시판 글쓰기 폼 */
+
+/* 게시판 글보기 영역 */
+.bbsview_list{
+	padding-bottom: 30px;
+	border-top: 2px solid #384d75;
+	text-align: left;
+}
+.bbsview_list li{
+	box-sizing: border-box;
+	padding: 0 15px;
+	border-bottom: 1px solid #ccc;
+	color: #666;
+	font-size: 14px;
+	line-height: 20px;
+}
+.bbsview_list .bbs_title{
+	width: 100%;
+	overflow: hidden;
+	white-space: nowrap;
+	text-overflow: ellipsis;
+	height: 50px;
+	line-height: 50px;
+	font-weight: bold;
+	font-size: 16px;
+}
+.bbsview_list .bbs_hit{
+	overflow: hidden;
+	height: 40px;
+	line-height: 40px;
+	float: left;
+	width: 50%;
+}
+.bbsview_list .bbs_date{
+	height: 40px;
+	line-height: 40px;
+	float: left;
+	width: 50%;
+}
+.bbs_content{
+	clear: both;
+	min-height: 200px;
+	padding: 20px 15px !important;
+}
+.btn_bbs{
+	margin-bottom: 5px;
+	display: inline-block;
+	width: 100%;
+	height: 35px;
+	font-size: 14px;
+	line-height: 35px;
+	background: #384d75;
+	color: #fff !important;
+	text-align: center;
+}
+.near_list{display: none;}
+
+@media all and (min-width: 801px){
+/* 태블릿+PC용 게시판뷰 */
+.near_list{
+	display: block;
+	border-top: 1px solid #ccc;
+}
+.btn_bbs{
+	width: 70px;
+	float: none;
+	text-align: center;
+}
+.near_list li{
+	padding: 10px;
+	border-bottom: 1px solid #ccc;
+	text-align: left;
+}
+.near_list li h4{
+	float: left;
+	width: 100px;
+	padding: 0 0 0 50px;
+	background: url(../img/ico_nearNext.png) no-repeat 12px 50%;
+	font-size: 15px;
+}
+.near_list li h4.next{
+	background-image: url(../img/ico_nearPrev.png);
+}
+/* //태블릿+PC용 게시판뷰 */
+}
+/* //게시판 글보기 영역 */
