--- a/css/main.css
+++ b/css/main.css
@@ -1,286 +1,281 @@
 @charset "UTF-8";
 @import url(http://fonts.googleapis.com/earlyaccess/nanumgothic.css);
-/* 공통영역  */
-	body{
-		font-family: 'Nanum Gothic', '나눔 고딕', sans-serif;
-		font-size: 16px;
-		letter-spacing: -1px;
-		color: #444;
-		word-wrap: break-word;
-		line-height: 1;/*폰트 사이즈 16일 시 라인하이트 1은 16, 2는 32...*/
-	}
-	/* : - 가상선택자, :: - 가상요소 */
-	a:link{color: #444;}
-	a:hover{color: #444;}
-	a:visited{color: #444;}
-	a{text-decoration: none;}
-	img{border: none;}
-	/* . 클래스선택자 */
-	.clear::after{
-		content: '';
-		clear: both;
-		display: block;
-	}
-	.txt_right{
-		text-align: right !important;
-	}
-	.mt20{
-		margin-top: 20px !important;
-	}
-	.w100p{
-		width: 100% !important;
-	}
+/* 공통영역 */
+body {
+	font-family: 'Nanum Gothic', '나눔 고딕', sans-serif;
+	font-size:16px;
+	letter-spacing: -1px;
+	color: #444;
+	word-wrap: break-word;
+	line-height: 1;
+}
+/* : 가상선택자, :: 가상요소 */
+a:link {color: #444;}
+a:hover {color: #444;}
+a:visited {color: #444;}
+a {text-decoration: none;}
+img {border: none;}
+/* . 클래스선택자 */
+.clear::after {
+	content: '';
+	clear: both;
+	display: block;
+}
+.txt_right {
+	text-align: right !important;
+}
+.mt20 {
+	margin-top: 20px !important;
+}
+.w100p {
+	width: 100% !important;
+}
 /* //공통영역 */
 
-/* 모바일영역 */
 /* 헤더영역 */
-	.on{
-		background: #31353d;
-	}
-	header{
-		height: 90px;
-		text-align: center;
-		z-index: 200;
-		background: rgba(0, 0, 0, 0.5);
-		position: absolute;
-		left: 0;
-		top: 0;
-		width: 100%;
-	}
-	.box_inner{
-		width: 100%;
-		margin: 0 auto;
-	}
-	/* 로고영역 */
-		.header_area h1{
-			float: none;
-			width: 100%;
-			height: 50px;
-			text-align: center;
-			padding: 3px 0 0;
-		}
-		.header_area h1 a{
-			display: inline-block;
-			width: 150px;
-			height: 80px;
-			background: url(../img/main_logo.png) no-repeat;
-			background-size: 150px 40px !important;
-			background-position: center center !important;
-			text-indent: -9999px;
-			overflow: hidden;
-		}
-	/* //로고영역 */
-	/* 상단메뉴영역 */
-		.openMOgnb{
-			display: block;
-			position: absolute;
-			left: 15px;
-			top: 35px;
-			width: 25px;
-			height: 16px;
-		}
-		.hdd{
-			text-indent: -9999px;
-			position: absolute;
-		}
-		.openMOgnb span{
-			box-sizing: border-box;
-			display: block;
-			width: 25px;
-			height: 3px;
-			margin-bottom: 4px;
-			border-radius: 10px;
-			background: #fff;
-		}
-		.openMOgnb span + span{
-			width: 17px;
-		}
-		.openMOgnb span:last-child{
-			width: 25px;
-			margin-bottom: 0px;
-		}
-		.header_cont{
-			float: none;
-			width: 100%;
-			background: #31353d;
-			display: none;
-		}
-		.closePop{
-			display: block;
-			position: absolute;
-			right: 0;
-			top: 15px;
-		}
-		.closePop a{
-			display: block;
-			width: 60px;
-			height: 60px;
-			text-indent: -9999px;
-			overflow: hidden;
-			background: url(../img/btn_closeMenu.png) no-repeat;
-			background-size: 60px;
-		}
-		.util{padding: 20px;}
-		.header_cont a{color: #fff; font-size: 16px;}
-		.util li{float: left;}
-		.util li::after{
-			content: '|';
-			display: inline-block;
-			padding: 0 10px;
-			color: #a2a2a3;
-			position: relative;
-			font-size: 10px;
-			top: -2px;
-		}
-		.util li:last-child::after{
-			content: '';
-			display: none;
-		}
-		.gnb{
-			float: none;
-			box-sizing: border-box;
-			padding-top: 0px;
-			height: auto;
-			border-top: 1px solid #83868b;
-		}
-		.gnb li{
-			float: left;
-			width: 50%;
-			text-align: left;
-			box-sizing: border-box;
-			border-bottom: 1px solid #83868b;
-		}
-		.gnb li a{
-			display: block;
-			padding: 0 0 0 65px;
-			height: 60px;
-			line-height: 60px;
-			background: url(../img/ico_gnb01.png) no-repeat 10px center;
-			background-size: 49px 56px;
-		}
-		.gnb_depth{display: none;}
-		.gnb li + li a{
-			background-image: url(../img/ico_gnb02.png);
-		}
-		.gnb li + li + li a{
-			background-image: url(../img/ico_gnb03.png);
-		}
-		.gnb li + li + li + li a{
-			background-image: url(../img/ico_gnb04.png);
-		}
-		.gnb li:nth-child(2n+1){
-			border-right: 1px solid #83868b;
-		}
-	/* //상단메뉴영역 */
-/* //헤더영역 */
+.on {
+	background: #32353d;
+}
+header {
+	height: 90px;
+	text-align: center;
+	z-index: 200;
+	background: rgba(0,0,0,0.5);
+	position: absolute;
+	left:0; top:0;
+	width:100%;
+}
+.box_inner {
+	width: 100%; margin: 0 auto;
+}
+/* 로고영역 */
+.header_area h1 {
+	float: none;
+	width: 100%;
+	height: 50px;
+	text-align: center;
+	padding: 3px 0 0;
+}
+.header_area h1 a {
+	display: inline-block;
+	width: 150px;
+	height: 80px;
+	background: url(../img/main_logo.png) no-repeat;
+	background-size: 150px 40px !important;
+	background-position: center center !important;
+	text-indent: -9999px;
+	overflow: hidden;
+}
+/* //로고영역 */
 
-/* 본문 컨테이너 영역 */
-	#container, #footer, .hdd, .quick_area{
-		text-align: center;
-	}
-	#container{
-		position: relative;
-		width: 100%;
-		padding-bottom: 30px;
-	}
-	/* pc용 슬라이드영역 숨김처리 */
-	.main_rolling_pc{display: none;}
-	/* 모바일 슬라이드 영역 */
-	.main_rolling_mobile{display: block;}
-	.swiper-slide img{width: 100%;}
-	.swiper-pagination-bullet{
-		width: 5px !important;
-		height: 5px !important;
-		margin: 0 3px !important;
-		background: #fff !important;
-		opacity: 0.2 !important;
-	}
-	.swiper-pagination-bullet-active{
-		opacity: 1 !important;
-	}
-	/* //모바일 슬라이드 영역 */
-	/* 갤러리 최근 게시물 영역 */
-	.about_area h2{
-		font-size: 20px;
-		padding: 27px 0 25px;
-	}
-	.about_area h2 b{
-		display: block;
-		padding-top: 10px;
-	}
-	.about_box{background: #fff;}
-	.place_list li{
-		float: none;
-		width: 100%;
-		margin: 0;
-		box-sizing: border-box;
-		padding: 0 20px;
-		top: 0;
-	}
-	.place_list li img{
-		width: 100%;
-	}
-	.place_list li h3{
-		font-weight: bold;
-		font-size: 18px;
-		padding-top: 25px;
-	}
-	.place_list p.txt{
-		padding: 10px 50px 30px;
-		line-height: 1.4;
-		box-sizing: border-box;
-		width: 100%;
-		overflow: hidden;
-		word-break: keep-all;
-		color: #666;
-	}
-	.place_list li .view{
-		padding-bottom: 10px;
-		margin: 0 0 30px;
-		display: inline-block;
-		padding-top: 5px;
-		border-top: 2px solid #333;
-		color: #666;
-	}
-	/* //갤러리 최근 게시물 영역 */
+/* 상단메뉴영역 */
+.openMOgnb {
+	display: block;
+	position: absolute;
+	left:15px;
+	top:35px;
+	width: 25px;
+	height: 16px;
+}
+.hdd {
+	text-indent: -9999px;
+	position: absolute;
+}
+.openMOgnb span {
+	box-sizing: border-box;
+	display: block;
+	width: 25px; height: 3px;
+	margin-bottom: 4px;
+	border-radius: 10px;
+	background: #fff;
+}
+.openMOgnb span + span {width: 17px;}
+.openMOgnb span:last-child {
+	width: 25px;
+	margin-bottom: 0px;
+}
+.header_cont {
+	float: none;
+	width: 100%;
+	background: #31353d;
+	display: none;
+}
+.closePop {
+	display: block;
+	position: absolute;
+	right: 0;
+	top:15px;
+}
+.closePop a {
+	display: block;
+	width: 60px; height: 60px;
+	text-indent: -9999px;
+	overflow: hidden;
+	background: url(../img/btn_closeMenu.png) no-repeat;
+	background-size: 60px;
+}
+.util {padding: 20px;}
+.header_cont a {color:#fff; font-size: 16px;}
+.util li {float: left;}
+.util li::after {
+	content: '|';
+	display: inline-block;
+	padding: 0 10px;
+	color: #a2a2a3;
+	font-size: 10px;
+	position:relative; 
+	top:-2px;
+}
+.util li:last-child::after {
+	content: '';
+	display: none;
+}
+.gnb {
+	float: none;
+	box-sizing: border-box;
+	padding-top: 0px;
+	height: auto;
+	border-top: 1px solid #83868b;
+}
+.gnb li {
+	float: left;
+	width:50%;
+	text-align:left;
+	box-sizing:border-box;
+	border-bottom: 1px solid #83868b;
+}
+.gnb li a {
+	display: block;
+	padding: 0 0 0 65px;
+	height: 60px;
+	line-height: 60px;
+	background: url(../img/ico_gnb01.png) no-repeat 10px center;
+	background-size: 49px 56px;
+}
+.gnb_depth {display: none;}
+.gnb li + li a {
+	background-image: url(../img/ico_gnb02.png);
+}
+.gnb li + li + li a {
+	background-image: url(../img/ico_gnb03.png);
+}
+.gnb li + li + li + li a {
+	background-image: url(../img/ico_gnb04.png);
+}
+.gnb li:nth-child(2n+1) {
+	border-right: 1px solid #83868b;
+}
+/* //상단메뉴영역 */
+/* //헤더영역  */
 
-	/* 공지사항 최근게시물 영역 */
-	.app_line{display: none;}
-	.appbbs_area{
-		padding: 0 20px;
-		text-align: left;
-	}
-	.bbs_line{
-		float: none;
-		width: 100%;
-		padding: 20px 0;
-		border-top: 1px solid #d6d7d8;
-	}
-	.bbs_line h3{
-		font-weight: bold;
-		font-size: 19px;
-	}
-	.bbs_line .notice_recent{padding-top: 10px;}
-	.bbs_line .notice_recent li{
-		padding: 8px 0;
-	}
-	/* //공지사항 최근게시물 영역 */
-/* //본문 컨테이너 영역 */
+/* 본문컨테이너영역 */
+#container, #footer, .hdd, .quick_area {
+	text-align: center;
+}
+#container {
+	position: relative;
+	width: 100%;
+	padding-bottom: 30px;
+}
+/* PC용 슬라이드영역은 숨김처리 */
+.main_rolling_pc {display: none;}
+/* 모바일슬라이드영역 */
+.main_rolling_mobile {display:block;}
+.swiper-slide img {width: 100%;}
+.swiper-pagination-bullet {
+	width: 5px !important; height: 5px !important;
+	margin: 0 3px !important;
+	background: #fff !important;
+	opacity: 0.2 !important;/* 기본투명도20% */
+}
+.swiper-pagination-bullet-active {
+	opacity: 1 !important;/* 투명도 100% */
+}
+/* //모바일슬라이드영역 */
+/* 겔러리최근게시물영역 */
+.about_area h2 {
+	font-size:20px;
+	padding: 27px 0 25px;
+}
+.about_area h2 b {
+	display: block;
+	padding-top: 10px;
+}
+.about_box {background: #fff;}
+.place_list li {
+	float:none;
+	width: 100%;
+	margin: 0;
+	box-sizing: border-box;
+	padding:0 20px;
+}
+.place_list li img {
+	width: 100%;
+}
+.place_list li h3 {
+	font-weight: bold;
+	font-size: 18px;
+	padding-top: 25px;	
+}
+.place_list p.txt {
+	padding: 10px 50px 30px;
+	line-height: 1.4;
+	box-sizing: border-box;
+	width: 100%;
+	overflow: hidden;
+	word-break: keep-all;
+	color: #666;
+}
+.place_list li .view {
+	padding-bottom: 10px;
+	margin:0 0 30px;
+	display: inline-block;
+	padding-top: 5px;
+	border-top: 2px solid #333;
+	color:#666;
+}
+/* 겔러리최근게시물영역 */
+
+/* 공지사항최근게시물영역 */
+.app_line {display: none;}
+.appbbs_area {
+	padding: 0 20px;
+	text-align: left;
+}
+.bbs_line {
+	float:none;
+	width: 100%;
+	padding: 20px 0;
+	border-top: 1px solid #d6d7d8;
+}
+.bbs_line h3 {
+	font-weight: bold;
+	font-size: 19px;
+}
+.bbs_line .notice_recent {padding-top: 10px;}
+.bbs_line .notice_recent li {
+	padding: 8px 0;
+}
+/* //공지사항최근게시물영역 */
+
+/* //본문컨테이너영역 */
 
 /* 푸터영역 */
-footer{
+footer {
 	border-top: 1px solid #ddd;
 }
-.foot_area{
+.foot_area {
 	box-sizing: border-box;
 	padding: 0 20px 90px;
 	position: relative;
 }
-.foot_list{padding-top: 25px;}
-.foot_list li{
+.foot_list {
+	padding-top: 25px;
+}
+.foot_list li {
 	float: left;
 }
-.foot_list li:first-child::after{
+.foot_list li:first-child::after {
 	content: '|';
 	display: inline-block;
 	padding: 0 10px;
@@ -288,40 +283,40 @@ footer{
 	position: relative;
 	top: -2px;
 }
-.foot_list li a{
-	font-weight: bold;
+.foot_list li a {
+	font-weight:bold;
 	font-size: 15px;
 }
-.foot_area h2{
+.foot_area h2 {
 	padding-top: 15px;
 	font-size: 14px;
 	color: #666;
 }
-.addr{
+.addr {
 	line-height: 1.3;
 	font-size: 14px;
 	color: #767676;
 	padding-top: 5px;
 }
-.gubun{color: #fff;}
-.br_line{display: block;}
-.space0{letter-spacing: 0;}
-.copy{
+.br_line {display: block;}
+.copy {
 	padding: 3px 0 20px;
 	font-size: 14px;
 	color: #767676;
 }
-.snslink{
+.snslink {
 	position: static;
 	width: 210px;
-	margin: 10px auto;
+	margin:10px auto;
 }
-.snslink li:first-child{margin-left: 0;}
-.snslink li{
+.snslink li:first-child {
+	margin-left: 0px;
+}
+.snslink li {
 	margin-left: 30px;
 	float: left;
 }
-.snslink li a{
+.snslink li a {
 	display: block;
 	width: 50px;
 	height: 74px;
@@ -329,7 +324,7 @@ footer{
 	overflow: hidden;
 	background: url(../img/ico_blog_r.png) no-repeat;
 }
-.snslink li + li a{
+.snslink li + li a {
 	background-image: url(../img/ico_facebook_r.png);
 }
 .snslink li + li + li a{
@@ -337,8 +332,8 @@ footer{
 }
 /* //푸터영역 */
 
-/* 퀵메뉴 영역 */
-.to_top{
+/* 퀵메뉴영역 */
+.to_top {
 	position: fixed;
 	right: 20px;
 	bottom: 100px;
@@ -346,7 +341,7 @@ footer{
 	background: none;
 	z-index: 100;
 }
-.to_top a{
+.to_top a {
 	display: block;
 	width: 45px;
 	height: 45px;
@@ -358,20 +353,20 @@ footer{
 	text-indent: -9999px;
 	overflow: hidden;
 }
-.quick_list{
+.quick_list {
 	position: fixed;
 	left: 0;
 	bottom: 0;
 	width: 100%;
 }
-.quick_list li{
+.quick_list li {
 	float: left;
 	width: 31%;
 	text-align: left;
 	background: #3a3e46;
 	font-size: 15px;
 }
-.quick_list li:first-child::after{
+.quick_list li:first-child::after {
 	content: '';
 	display: inline-block;
 	width: 1px;
@@ -382,13 +377,13 @@ footer{
 	margin-top: -8px;
 	background: #76787e;
 }
-.quick_list li a{
+.quick_list li a {
 	display: block;
 	padding: 10px 0;
 	color: #fff;
 }
-.quick_list li a p{display: none;}
-.quick_list li a h3{
+.quick_list li a p {display: none;}
+.quick_list li a h3 {
 	height: 37px;
 	line-height: 37px;
 	padding-bottom: 0;
@@ -398,19 +393,19 @@ footer{
 	color: #fff;
 	letter-spacing: -1px;
 }
-.quick_list li + li{
+.quick_list li + li {
 	width: 37%;
 }
-.quick_list li + li + li{
+.quick_list li + li + li {
 	width: 32%;
 }
-.quick_list li + li a h3{
+.quick_list li + li a h3 {
 	background-image: url(../img/ico_katalk_mobtm.png);
 }
-.quick_list li + li + li a h3{
+.quick_list li + li + li a h3 {
 	background-image: url(../img/ico_contact_mobtm.png);
 }
-.quick_list li:last-child::before{
+.quick_list li:last-child::before {
 	content: '';
 	display: inline-block;
 	width: 1px;
@@ -421,5 +416,6 @@ footer{
 	margin-top: -8px;
 	background: #76787e;
 }
-/* //퀵메뉴 영역 */
-/*// 모바일영역 */
+/* //퀵메뉴영역 */
+
+/* //모바일영역 */
