--- a/css/board.css
+++ b/css/board.css
@@ -1,10 +1,10 @@
 @charset "UTF-8";
-/* 메인상단 위치표시 영역 */
-.location_area{
+/* 메인상단 위치표시영역 */
+.location_area {
 	height: 260px;
-	background: url(../img/img_top2.jpg) no-repeat center bottom / cover;
+	background: url(../img/img_top2.jpg) no-repeat center;
 }
-.tit_page{
+.tit_page {
 	padding: 140px 0 0 0;
 	margin: 0 45px;
 	border-bottom: 1px solid #ccc;
@@ -13,42 +13,42 @@
 	letter-spacing: 3px;
 	text-align: left;
 }
-.location{display: none;}
-ul.page_menu{
+.location {display: none;}
+ul.page_menu {
 	display: block;
 	padding: 10px 0 0 45px;
 }
-ul.page_menu li{
+ul.page_menu li {
 	float: left;
 	padding-bottom: 10px;
 }
-ul.page_menu li a.on{
+ul.page_menu li a.on {
 	border-bottom: 1px solid #fff;
 	color: #fff;
 	background: none;
 }
-ul.page_menu li a{
+ul.page_menu li a {
 	display: block;
 	margin-right: 20px;
 	font-size: 15px;
 	color: #ddd;
 }
-.tit_page .in{
+.tit_page .in {
 	font-variant: small-caps;
 }
 /* //메인상단 위치표시영역 */
 
-/* 게시판 리스트 본문영역 */
-.bodytext_area{
+/* 게시판리스트 영역 */
+.bodytext_area {
 	box-sizing: border-box;
-	padding: 0;
+	padding: 0px;
 }
-.minisrch_form{
+.minisrch_form {
 	width: 100%;
 	text-align: right;
 	margin-bottom: 20px;
 }
-.minisrch_form .tbox{
+.minisrch_form .tbox {
 	padding: 0 5px 0 30px;
 	width: 200px;
 	height: 35px;
@@ -58,32 +58,38 @@ ul.page_menu li a{
 	background: url(../img/ico_search.png) no-repeat 10px 50%;
 	background-size: 15px;
 }
-.btn_srch{
+.btn_srch {
 	display: inline-block;
 	width: 70px;
 	text-align: center;
 	height: 35px;
+	font-size: 14px;
 	line-height: 35px;
 	vertical-align: middle;
 	background: #384d75;
 	color: #fff !important;
 	border: none;
 }
-.minisrch_form legend{
-	font-size: 0;
+.minisrch_form legend {
+	text-indent: -9999px;
+	font-size: 0px;
 }
-input::placeholder{
+input::placeholder {
 	color: #999;
 }
-.bbsListTbl{
+.bbsListTbl {
 	width: 100%;
-	border-top: 2px solid #384d75;
+	border-top:2px solid #384d75;
 }
-.bbsListTbl th:nth-child(1){display: none;}
-.bbsListTbl th:nth-child(2){width: 70%;}
-.bbsListTbl th:nth-child(3){display: none;}
-.bbsListTbl th:nth-child(4){width: 30%;}
-.bbsListTbl th{
+.bbsListTbl th:nth-child(1) {display: none;}
+.bbsListTbl th:nth-child(2) {
+	width: 70%;
+}
+.bbsListTbl th:nth-child(3) {display: none;}
+.bbsListTbl th:nth-child(4) {
+	width: 30%;
+}
+.bbsListTbl th {
 	border-bottom: 1px solid #ccc;
 	font-weight: bold;
 	font-size: 14px;
@@ -92,34 +98,40 @@ input::placeholder{
 	height: 45px;
 	background: #fef3fa;
 }
-.bbsListTbl td:nth-child(1){display: none;}
-.bbsListTbl td:nth-child(3){display: none;}
-.bbsListTbl td{
+.bbsListTbl td:nth-child(1) {display: none;}
+.bbsListTbl td:nth-child(3) {display: none;}
+.bbsListTbl td {
 	text-align: center;
 	line-height: 1.3;
 	border-bottom: 1px solid #ccc;
 }
-.bbsListTbl td:nth-child(2){text-align: left;}
-.bbsListTbl th, .bbsListTbl td{
+.bbsListTbl td:nth-child(2) {
+	text-align: left;
+}
+.bbsListTbl th, .bbsListTbl td {
 	padding: 10px;
 	box-sizing: border-box;
 	height: 45px;
 }
-.pagination{padding: 40px 0 0;}
-.pagination a.pbtn{
+.pagination {
+	padding: 40px 0px 0px;
+}
+.pagination a.pbtn {
 	display: inline-block;
 	padding: 7px;
 	text-align: center;
 	vertical-align: middle;
 	font-size: 0;
 }
-.pagination a{display: inline-block;}
-.pagination a .currentpage{
+.pagination a {
+	display: inline-block;
+}
+.pagination a .currentpage {
 	border-radius: 3px;
 	background: #384d75;
 	color: #fff;
 }
-.pagination a .pagenum{
+.pagination a .pagenum {
 	display: inline-block;
 	width: 25px;
 	height: 25px;
@@ -127,9 +139,13 @@ input::placeholder{
 	text-align: center;
 	vertical-align: middle;
 }
-.btn_line{padding: 20px 0;}
-.btn_line a:first-child{margin-left: 0;}
-.btn_baseColor{
+.btn_line {
+	padding: 20px 0;
+}
+.btn_line a:first-child {
+	margin-left:0;
+}
+.btn_baseColor {
 	display: inline-block;
 	width: 100%;
 	height: 50px;
@@ -142,39 +158,46 @@ input::placeholder{
 	vertical-align: bottom;
 	border: none;
 }
-
-@media all and (min-width: 801px){
+@media all and (min-width: 801px) {
 /* 태블릿 + PC용 */
-.bbsListTbl th:nth-child(1){
+.bbsListTbl th:nth-child(1) {
+	display: block;
 	margin-top: 7px;
+}
+.bbsListTbl th:nth-child(2) {
+	width: 60%;
+}
+.bbsListTbl th:nth-child(3) {
+	display: block;
+	margin-top: 7px;
+}
+.bbsListTbl th:nth-child(4) {
+	width: 20%;
+}
+.bbsListTbl td:nth-child(1) {
 	display: block;
 }
-.bbsListTbl th:nth-child(2){width: 60%;}
-.bbsListTbl th:nth-child(3){
-	margin-top: 7px;
+.bbsListTbl td:nth-child(3) {
 	display: block;
 }
-.bbsListTbl th:nth-child(4){width: 20%;}
-.bbsListTbl td:nth-child(1){display: block;}
-.bbsListTbl td:nth-child(3){display: block;}
-.btn_baseColor{
+.btn_baseColor {
 	width: 125px;
 	font-weight: normal;
 }
 /* //태블릿 + PC용 */
 }
-/* //게시판 리스트 본문영역 */
+/* //게시판리스트 영역 */
 
 /* 게시판 글쓰기 폼 */
-.appForm{
-	margin: 20px auto;
+.appForm {
+	margin:20px auto;
 	text-align: left;
 }
-.appForm legend{
-	font-size: 0;
+.appForm legend {
+	font-size: 0px;
 }
-.pilsoo_item::before{
-	top: 1px;
+.pilsoo_item::before {
+	top:1px;
 	content: '*';
 	display: inline-block;
 	position: absolute;
@@ -182,27 +205,27 @@ input::placeholder{
 	width: 15px;
 	font-weight: bold;
 	font-size: 17px;
-	color: #f00;
+	color: red;
 }
-.info_pilsoo{
+.info_pilsoo {
 	position: relative;
 	padding-left: 20px;
 	padding-bottom: 10px;
 	border-bottom: 2px solid #000;
 	font-size: 15px;
-	color: #f00;
+	color: red;
 }
-.app_list{
+.app_list {
 	padding: 10px 0;
 	border-bottom: 1px solid #ccc;
 }
-.app_list li{
+.app_list li {
 	position: relative;
 	padding: 10px 0;
 	border-bottom: 1px solid #ccc;
 }
-.app_list li .tit_lbl{
-	float: none;	
+.app_list li .tit_lbl {
+	float: none;
 	line-height: 30px;
 	position: relative;
 	box-sizing: border-box;
@@ -211,12 +234,13 @@ input::placeholder{
 	font-size: 17px;
 	letter-spacing: -2px;
 }
-.app_content{
+.app_content {
 	float: none;
 	width: auto;
 	border: 1px solid #ccc;
+	margin-left: 1px;
 }
-.app_content input{
+.app_content input {
 	border: none;
 	width: 100% !important;
 	box-sizing: border-box;
@@ -227,7 +251,7 @@ input::placeholder{
 	line-height: normal;
 	font-size: 15px;
 }
-.appForm textarea{
+.appForm textarea {
 	height: 130px;
 	box-sizing: border-box;
 	padding: 10px;
@@ -236,33 +260,35 @@ input::placeholder{
 	color: #444;
 	border: none;
 }
-.appForm textarea::placeholder{color: #999;}
-.btn_baseColor{margin-top: 10px;}
-
-@media all and (min-width: 801px){
-/* 태블릿 + PC용 */
-.app_list .tit_lbl{
-	width: 21%;
-	float: left;
+.appForm textarea::placeholder {
+	color: #999;
 }
-.app_list .app_content{
+.btn_baseColor {
+	margin-top: 10px;
+}
+@media all and (min-width: 801px) {
+/* 태블릿+PC용 */
+.app_list .tit_lbl {
+	width: 21%;
+}
+.app_list .app_content {
 	width: 79%;
-	float: right;
+	float:right;
 	border: 1px solid #ccc;
 }
-.btn_line{text-align: center;}
-.appForm textarea{height: 230px;}
-/* //태블릿 + PC용 */	
+.btn_line {text-align: center;}
+.appForm textarea {height: 230px;}
+/* //태블릿+PC용 */
 }
 /* //게시판 글쓰기 폼 */
 
 /* 게시판 글보기 영역 */
-.bbsview_list{
+.bbsview_list {
 	padding-bottom: 30px;
 	border-top: 2px solid #384d75;
 	text-align: left;
 }
-.bbsview_list li{
+.bbsview_list li {
 	box-sizing: border-box;
 	padding: 0 15px;
 	border-bottom: 1px solid #ccc;
@@ -270,7 +296,7 @@ input::placeholder{
 	font-size: 14px;
 	line-height: 20px;
 }
-.bbsview_list .bbs_title{
+.bbsview_list .bbs_title {
 	width: 100%;
 	overflow: hidden;
 	white-space: nowrap;
@@ -280,25 +306,25 @@ input::placeholder{
 	font-weight: bold;
 	font-size: 16px;
 }
-.bbsview_list .bbs_hit{
+.bbsview_list .bbs_hit {
 	overflow: hidden;
 	height: 40px;
 	line-height: 40px;
 	float: left;
 	width: 50%;
 }
-.bbsview_list .bbs_date{
+.bbsview_list .bbs_date {
+	float: left;
 	height: 40px;
 	line-height: 40px;
-	float: left;
 	width: 50%;
 }
-.bbs_content{
+.bbs_content {
 	clear: both;
 	min-height: 200px;
 	padding: 20px 15px !important;
 }
-.btn_bbs{
+.btn_bbs {
 	margin-bottom: 5px;
 	display: inline-block;
 	width: 100%;
@@ -309,33 +335,32 @@ input::placeholder{
 	color: #fff !important;
 	text-align: center;
 }
-.near_list{display: none;}
-
-@media all and (min-width: 801px){
+.near_list {display: none;}
+@media all and (min-width: 801px) {
 /* 태블릿+PC용 게시판뷰 */
-.near_list{
+.near_list {
 	display: block;
 	border-top: 1px solid #ccc;
 }
-.btn_bbs{
+.btn_bbs {
 	width: 70px;
 	float: none;
 	text-align: center;
 }
-.near_list li{
+.near_list li {
 	padding: 10px;
 	border-bottom: 1px solid #ccc;
 	text-align: left;
 }
-.near_list li h4{
+.near_list li h4 {
 	float: left;
 	width: 100px;
 	padding: 0 0 0 50px;
-	background: url(../img/ico_nearNext.png) no-repeat 12px 50%;
+	background:url(./img/ico_nearNext.png) no-repeat 12px 50%;
 	font-size: 15px;
 }
-.near_list li h4.next{
-	background-image: url(../img/ico_nearPrev.png);
+.near_list li h4.next {
+	background-image: url(./img/ico_nearPrev.png);
 }
 /* //태블릿+PC용 게시판뷰 */
 }
