오전작업 마무리

--- a/css/tablet.css
+++ b/css/tablet.css
@@ -8,7 +8,7 @@
   }
   .header_area h1 {
     float: left;
-    padding: 25px 0 0;
+    padding: 15px 0 0;
     padding-left: 20px;
     width: auto;
     height: inherit;
@@ -16,9 +16,9 @@
   }
   .header_area h1 a {
     display: block;
-    width: 270px;
-    height: 71px;
-    background-size: inherit !important;
+    width: 100px;
+    height: 80px;
+    background-size: 80px 80px !important;
   }
   .openMOgnb {
     display: none;
@@ -111,6 +111,7 @@
     height: 550px;
     line-height: 550px;
     background-size: cover;
+    background-position: center center;
     width: 100%;
   }
   .roll_content a img {
@@ -119,21 +120,21 @@
   li.imglist0 {
     position: relative;
     z-index: 50;
-    background: url(../img/maple.jpg) no-repeat;
+    background: url(../img/slide01_pc.png) no-repeat;
   }
   li.imglist1 {
     position: absolute;
     z-index: 10;
     left: 0;
     top: 0;
-    background: url(../img/img_slidecontents02.png) no-repeat;
+    background: url(../img/slide02_pc.png) no-repeat;
   }
   li.imglist2 {
     position: absolute;
     z-index: 10;
     left: 0;
     top: 0;
-    background: url(../img/img_slidecontents03.png) no-repeat;
+    background: url(../img/slide03_pc.png) no-repeat;
   }
   .roll_content {
     position: relative;
