--- a/css/board.css
+++ b/css/board.css
@@ -217,7 +217,7 @@ input::placeholder {
 }
 .app_list {
 	padding: 10px 0;
-	border-bottom: 1px solid #ccc;
+	/* border-bottom: 1px solid #ccc; */
 }
 .app_list li {
 	position: relative;
@@ -362,11 +362,11 @@ input:-ms-input-placeholder{
 	float: left;
 	width: 100px;
 	padding: 0 0 0 50px;
-	background:url(./img/ico_nearNext.png) no-repeat 12px 50%;
+	background:url(../img/ico_nearNext.png) no-repeat 12px 50%;
 	font-size: 15px;
 }
 .near_list li h4.next {
-	background-image: url(./img/ico_nearPrev.png);
+	background-image: url(../img/ico_nearPrev.png);
 }
 /* //태블릿+PC용 게시판뷰 */
 }
