--- a/css/main.css
+++ b/css/main.css
@@ -181,7 +181,7 @@ header {
 .main_rolling_pc {display: none;}
 /* 모바일슬라이드영역 */
 .main_rolling_mobile {display:block;}
-.swiper-slide img {height: 300; width: 100%;}
+.swiper-slide img {height: 250px;}
 .swiper-pagination-bullet {
 	width: 5px !important; height: 5px !important;
 	margin: 0 3px !important;
