--- a/css/tablet.css
+++ b/css/tablet.css
@@ -120,21 +120,21 @@
   li.imglist0 {
     position: relative;
     z-index: 50;
-    background: url(../img/slide01_pc.png) no-repeat;
+    background: url(../img/slide_01.jpg) no-repeat;
   }
   li.imglist1 {
     position: absolute;
     z-index: 10;
     left: 0;
     top: 0;
-    background: url(../img/slide02_pc.png) no-repeat;
+    background: url(../img/slide_02.jpg) no-repeat;
   }
   li.imglist2 {
     position: absolute;
     z-index: 10;
     left: 0;
     top: 0;
-    background: url(../img/slide03_pc.png) no-repeat;
+    background: url(../img/slide_03.jpg) no-repeat;
   }
   .roll_content {
     position: relative;
