회원가입폼 마무리

--- a/css/join.css
+++ b/css/join.css
@@ -9,7 +9,7 @@ label{vertical-align: middle;}
 .css-radio{
 	overflow: hidden;
 	position: absolute;
-	left: -1000px;
+	left: -9999px;
 	width: 1px;
 	height: 1px;
 }
@@ -33,11 +33,11 @@ label{vertical-align: middle;}
 .css_checkbox{
 	overflow: hidden;
 	position: absolute;
-	left: -1000px;
+	left: -9999px;
 	width: 1px;
 	height: 1px;
 }
-.css_checkbox + label{
+.agree{
 	display: inline-block;
 	height: 20px;
 	padding-left: 30px !important;
@@ -50,5 +50,8 @@ label{vertical-align: middle;}
 	-moz-user-select: none;
 }
 .css_checkbox:checked + label{
+	background-position: 0 -20px;
+}
+.css_checkbox:checked + label + label{
 	background-position: 0 -20px;
 }
